src/main/resources/antlr/MASProjectParser.java
// Generated from /Users/aidanscannell/Google Drive/Bristol PG/Academic/Research Project/uncertain-agentspeak/src/main/resources/antlr/MASProject.g4 by ANTLR 4.7
package main.resources.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MASProjectParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, ATOM=15, CLASS_NAME=16, 
		NUMBER=17, WHITESPACE=18, NEWLINE=19, COMMENT=20, STRING=21, INTEGER=22;
	public static final int
		RULE_mas_project = 0, RULE_name = 1, RULE_content = 2, RULE_infrastructure = 3, 
		RULE_centralised = 4, RULE_environment = 5, RULE_env_class_name = 6, RULE_agents = 7, 
		RULE_agent = 8, RULE_agent_name = 9, RULE_numAgents = 10, RULE_arguments_list = 11, 
		RULE_arg = 12;
	public static final String[] ruleNames = {
		"mas_project", "name", "content", "infrastructure", "centralised", "environment", 
		"env_class_name", "agents", "agent", "agent_name", "numAgents", "arguments_list", 
		"arg"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'MAS'", "'{'", "'}'", "'infrastructure:'", "'centralised'", "'environment:'", 
		"'env.'", "'('", "')'", "'agents:'", "'#'", "','", "'true'", "'false'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "ATOM", "CLASS_NAME", "NUMBER", "WHITESPACE", "NEWLINE", 
		"COMMENT", "STRING", "INTEGER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MASProject.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MASProjectParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Mas_projectContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MASProjectParser.EOF, 0); }
		public Mas_projectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mas_project; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).enterMas_project(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).exitMas_project(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASProjectVisitor ) return ((MASProjectVisitor<? extends T>)visitor).visitMas_project(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mas_projectContext mas_project() throws RecognitionException {
		Mas_projectContext _localctx = new Mas_projectContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mas_project);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(T__0);
			setState(27);
			name();
			setState(28);
			match(T__1);
			setState(29);
			content();
			setState(30);
			match(T__2);
			setState(31);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode ATOM() { return getToken(MASProjectParser.ATOM, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASProjectVisitor ) return ((MASProjectVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			match(ATOM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContentContext extends ParserRuleContext {
		public InfrastructureContext infrastructure() {
			return getRuleContext(InfrastructureContext.class,0);
		}
		public EnvironmentContext environment() {
			return getRuleContext(EnvironmentContext.class,0);
		}
		public AgentsContext agents() {
			return getRuleContext(AgentsContext.class,0);
		}
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).enterContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).exitContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASProjectVisitor ) return ((MASProjectVisitor<? extends T>)visitor).visitContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_content);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			infrastructure();
			setState(36);
			environment();
			setState(37);
			agents();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InfrastructureContext extends ParserRuleContext {
		public CentralisedContext centralised() {
			return getRuleContext(CentralisedContext.class,0);
		}
		public InfrastructureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infrastructure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).enterInfrastructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).exitInfrastructure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASProjectVisitor ) return ((MASProjectVisitor<? extends T>)visitor).visitInfrastructure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InfrastructureContext infrastructure() throws RecognitionException {
		InfrastructureContext _localctx = new InfrastructureContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_infrastructure);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(T__3);
			setState(40);
			centralised();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CentralisedContext extends ParserRuleContext {
		public CentralisedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_centralised; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).enterCentralised(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).exitCentralised(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASProjectVisitor ) return ((MASProjectVisitor<? extends T>)visitor).visitCentralised(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CentralisedContext centralised() throws RecognitionException {
		CentralisedContext _localctx = new CentralisedContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_centralised);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnvironmentContext extends ParserRuleContext {
		public Env_class_nameContext env_class_name() {
			return getRuleContext(Env_class_nameContext.class,0);
		}
		public Arguments_listContext arguments_list() {
			return getRuleContext(Arguments_listContext.class,0);
		}
		public EnvironmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_environment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).enterEnvironment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).exitEnvironment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASProjectVisitor ) return ((MASProjectVisitor<? extends T>)visitor).visitEnvironment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnvironmentContext environment() throws RecognitionException {
		EnvironmentContext _localctx = new EnvironmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_environment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(T__5);
			setState(45);
			match(T__6);
			setState(46);
			env_class_name();
			setState(47);
			match(T__7);
			setState(48);
			arguments_list();
			setState(49);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Env_class_nameContext extends ParserRuleContext {
		public TerminalNode CLASS_NAME() { return getToken(MASProjectParser.CLASS_NAME, 0); }
		public Env_class_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_env_class_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).enterEnv_class_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).exitEnv_class_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASProjectVisitor ) return ((MASProjectVisitor<? extends T>)visitor).visitEnv_class_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Env_class_nameContext env_class_name() throws RecognitionException {
		Env_class_nameContext _localctx = new Env_class_nameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_env_class_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(CLASS_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AgentsContext extends ParserRuleContext {
		public List<AgentContext> agent() {
			return getRuleContexts(AgentContext.class);
		}
		public AgentContext agent(int i) {
			return getRuleContext(AgentContext.class,i);
		}
		public AgentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agents; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).enterAgents(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).exitAgents(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASProjectVisitor ) return ((MASProjectVisitor<? extends T>)visitor).visitAgents(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AgentsContext agents() throws RecognitionException {
		AgentsContext _localctx = new AgentsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_agents);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(T__9);
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(54);
				agent();
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ATOM );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AgentContext extends ParserRuleContext {
		public Agent_nameContext agent_name() {
			return getRuleContext(Agent_nameContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(MASProjectParser.NEWLINE, 0); }
		public NumAgentsContext numAgents() {
			return getRuleContext(NumAgentsContext.class,0);
		}
		public AgentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).enterAgent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).exitAgent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASProjectVisitor ) return ((MASProjectVisitor<? extends T>)visitor).visitAgent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AgentContext agent() throws RecognitionException {
		AgentContext _localctx = new AgentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_agent);
		try {
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				agent_name();
				setState(60);
				match(NEWLINE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				agent_name();
				setState(63);
				match(T__10);
				setState(64);
				numAgents();
				setState(65);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Agent_nameContext extends ParserRuleContext {
		public TerminalNode ATOM() { return getToken(MASProjectParser.ATOM, 0); }
		public Agent_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agent_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).enterAgent_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).exitAgent_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASProjectVisitor ) return ((MASProjectVisitor<? extends T>)visitor).visitAgent_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Agent_nameContext agent_name() throws RecognitionException {
		Agent_nameContext _localctx = new Agent_nameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_agent_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(ATOM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumAgentsContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(MASProjectParser.INTEGER, 0); }
		public NumAgentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numAgents; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).enterNumAgents(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).exitNumAgents(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASProjectVisitor ) return ((MASProjectVisitor<? extends T>)visitor).visitNumAgents(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumAgentsContext numAgents() throws RecognitionException {
		NumAgentsContext _localctx = new NumAgentsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_numAgents);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arguments_listContext extends ParserRuleContext {
		public List<ArgContext> arg() {
			return getRuleContexts(ArgContext.class);
		}
		public ArgContext arg(int i) {
			return getRuleContext(ArgContext.class,i);
		}
		public Arguments_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).enterArguments_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).exitArguments_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASProjectVisitor ) return ((MASProjectVisitor<? extends T>)visitor).visitArguments_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Arguments_listContext arguments_list() throws RecognitionException {
		Arguments_listContext _localctx = new Arguments_listContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_arguments_list);
		int _la;
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				arg();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				arg();
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(75);
					match(T__11);
					setState(76);
					arg();
					}
					}
					setState(79); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__11 );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(MASProjectParser.NUMBER, 0); }
		public TerminalNode STRING() { return getToken(MASProjectParser.STRING, 0); }
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).enterArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MASProjectListener ) ((MASProjectListener)listener).exitArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASProjectVisitor ) return ((MASProjectVisitor<? extends T>)visitor).visitArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_arg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__12) | (1L << T__13) | (1L << NUMBER) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}